spade-tests/src/snapshots/spade_tests__ast_lowering__trait_param_defaults_must_be_packed_at_the_end.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait Trout<T = bool, U, V = ()> {}


error: Generic parameters with a default must be trailing
  ┌─ testinput:1:12
  │
1 │ trait Trout<T = bool, U, V = ()> {}
  │            ^^^^^^^^^^^^^^^^^^^^^
  │             │
  │             This parameter has a default and is not trailing
